--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,10 +9,6 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      
-      - IMAGE_REPO_NAME=codebuild
-      - IMAGE_TAG=latest 
-      
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
@@ -20,9 +16,36 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - AWS_DEFAULT_REGION=ap-south-1
-      - AWS_ACCOUNT_ID=078726126237
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+
+
+
+
+# version: 0.2
+
+# phases:
+#   pre_build:
+#     commands:
+#       - echo Logging in to Amazon ECR...
+#       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+#   build:
+#     commands:
+#       - echo Build started on `date`
+#       - echo Building the Docker image...
+      
+#       - IMAGE_REPO_NAME=codebuild
+#       - IMAGE_TAG=latest 
+      
+#       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+#       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+
+#   post_build:
+#     commands:
+#       - echo Build completed on `date`
+#       - echo Pushing the Docker image...
+#       - AWS_DEFAULT_REGION=ap-south-1
+#       - AWS_ACCOUNT_ID=078726126237
+#       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
 
 # version: 0.2
