--- a/buildspec.yml
+++ b/buildspec.yml
@@ -77,6 +77,7 @@ phases:
       - AWS_ACCOUNT_ID=542023287726
       - IMAGE_TAG=latest
       - AWS_DEFAULT_REGION=ap-south-1
+      - IMAGE_REPO_NAME=node-app
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
 
