--- a/buildspec.yml
+++ b/buildspec.yml
@@ -65,10 +65,18 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
+      - REPOSITORY_URI=public.ecr.aws/c9r1n7y5/node-app
+      - IMAGE_TAG=latest
+      - AWS_DEFAULT_REGION=ap-south-1
+      - IMAGE_REPO_NAME=node-app
+      - AWS_ACCOUNT_ID=542023287726
+      
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      
+
 #       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
-#       - docker tag $REPOSITORY_URI:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+     # - docker tag $REPOSITORY_URI:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
   post_build:
     commands:
@@ -78,7 +86,8 @@ phases:
       - IMAGE_TAG=latest
       - AWS_DEFAULT_REGION=ap-south-1
       - IMAGE_REPO_NAME=node-app
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+    #  - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker push $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
 
 
 
