--- a/buildspec.yml
+++ b/buildspec.yml
@@ -72,8 +72,9 @@ phases:
       - AWS_ACCOUNT_ID=542023287726
       
       - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
-      
+     # - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
+
 
 #       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
      # - docker tag $REPOSITORY_URI:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
@@ -86,8 +87,10 @@ phases:
       - IMAGE_TAG=latest
       - AWS_DEFAULT_REGION=ap-south-1
       - IMAGE_REPO_NAME=node-app
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+
     #  - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - docker push $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+     # - docker push $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
 
 
 
