--- a/buildspec.yml
+++ b/buildspec.yml
@@ -71,8 +71,9 @@ phases:
       - IMAGE_REPO_NAME=node-app
       - AWS_ACCOUNT_ID=542023287726
       
-      - docker build -t $REPOSITORY_URI:latest .
+      #- docker build -t $REPOSITORY_URI:latest .
      # - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
 
 
