--- a/buildspec.yml
+++ b/buildspec.yml
@@ -88,6 +88,8 @@ phases:
       - IMAGE_TAG=latest
       - AWS_DEFAULT_REGION=ap-south-1
       - IMAGE_REPO_NAME=node-app
+      - aws ecr get-login-password  --region ap-south-1 | docker login --username AWS  --password-stdin 078726126237.dkr.ecr.ap-south-1.amazonaws.com
+
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
     #  - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
