--- a/buildspec.yml
+++ b/buildspec.yml
@@ -76,7 +76,7 @@ phases:
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
 
-      - docker push 542023287726.dkr.ecr.ap-south-1.amazonaws.com/node-app
+     # - docker push 542023287726.dkr.ecr.ap-south-1.amazonaws.com/node-app
 #       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
      # - docker tag $REPOSITORY_URI:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 
@@ -91,7 +91,9 @@ phases:
      # - aws ecr get-login-password  --region ap-south-1 | docker login --username AWS  --password-stdin 078726126237.dkr.ecr.ap-south-1.amazonaws.com
 
       #- docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      #- docker push 542023287726.dkr.ecr.ap-south-1.amazonaws.com/node-app
+     
+      - eval $(aws ecr get-login | sed 's|https://||')
+      - docker push 542023287726.dkr.ecr.ap-south-1.amazonaws.com/node-app
 
     #  - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
      # - docker push $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
