--- a/buildspec.yml
+++ b/buildspec.yml
@@ -58,7 +58,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - REPOSITORY_URI=public.ecr.aws/c9r1n7y5/node-app
       - IMAGE_TAG=latest
-      - aws ecr get-login-password  --region ap-south-1 | docker login --username AWS  --password-stdin 078726126237.dkr.ecr.ap-south-1.amazonaws.com
+      - aws ecr get-login-password  --region ap-south-1 | docker login --username AWS  --password-stdin 542023287726.dkr.ecr.ap-south-1.amazonaws.com
 
       #- aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
@@ -91,8 +91,9 @@ phases:
      # - aws ecr get-login-password  --region ap-south-1 | docker login --username AWS  --password-stdin 078726126237.dkr.ecr.ap-south-1.amazonaws.com
 
       #- docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-     
-      - eval $(aws ecr get-login  --region ap-south-1 | sed 's|https://||')
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 542023287726.dkr.ecr.ap-south-1.amazonaws.com
+
+      #- eval $(aws ecr get-login  --region ap-south-1 | sed 's|https://||')
       - docker push 542023287726.dkr.ecr.ap-south-1.amazonaws.com/node-app
 
     #  - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
