--- a/buildspec.yml
+++ b/buildspec.yml
@@ -90,11 +90,11 @@ phases:
       - IMAGE_REPO_NAME=node-app
      # - aws ecr get-login-password  --region ap-south-1 | docker login --username AWS  --password-stdin 078726126237.dkr.ecr.ap-south-1.amazonaws.com
 
-      #- docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 542023287726.dkr.ecr.ap-south-1.amazonaws.com
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+#       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 542023287726.dkr.ecr.ap-south-1.amazonaws.com
 
       #- eval $(aws ecr get-login  --region ap-south-1 | sed 's|https://||')
-      - docker push 542023287726.dkr.ecr.ap-south-1.amazonaws.com/node-app
+#       - docker push 542023287726.dkr.ecr.ap-south-1.amazonaws.com/node-app
 
     #  - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
      # - docker push $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
